added hover effect, hamburger nav bar (which I have no idea how to turn into a horizontal nav bar with media query,) site is responsive, and all columns are now in order! I need some serious help with navbar stuff but I'm turning this in and looking forward to notes!

--- a/code/index.html
+++ b/code/index.html
@@ -14,11 +14,23 @@
         <div class="logo-container">
           <img src="logo.svg" alt="logo for site">
         </div>
-          <ul>
-            <li><a href="default.asp">Home</a></li>
-            <li><a href="news.asp">News</a></li>
-            <li><a href="media.asp">Media</a></li>
-          </ul>
+        <nav>
+          <div class="navbar">
+            <div class="container nav-container">
+                <input class="checkbox" type="checkbox" name="" id="" />
+                <div class="hamburger-lines">
+                  <span class="line line1"></span>
+                  <span class="line line2"></span>
+                  <span class="line line3"></span>
+                </div>  
+                <div class="menu-items">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Media</a></li>
+                  <li><a href="#">About</a></li>
+                </div>
+            </div>
+          </div>
+        </nav>
       </section>
     </header>
 
@@ -31,28 +43,28 @@
     </section>
 
     <section class="small-news">
-      <div class="article-one">Here's a Tattoo
+      <div class="small-news-article">Here's a Tattoo
         <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-ralph-rabago-3214690.jpg" alt="first tat article">
       </div>
-      <div class="article-two">Here's a cat too!
+      <div class="small-news-article">Here's a cat too!
         <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-pixabay-208984.jpg" alt="first cat article">
       </div>
-      <div class="article-three">More tats!
+      <div class="small-news-article">More tats!
         <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-tim-samuel-5845304.jpg" alt="second tat article">
       </div>
-      <div class="article-four">More cats!
+      <div class="small-news-article">More cats!
         <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-pixabay-45170.jpg" alt="second cat article">
       </div>
-      <div class="article-five">Tats
+      <div class="small-news-article">Tats
         <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-lil-artsy-1461816.jpg" alt="third tat article">
       </div>
-      <div class="article-six">Cats
+      <div class="small-news-article">Cats
         <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-katarzyna-modrzejewska-1314550.jpg" alt="third cat article">
       </div>
-      <div class="article-seven">Finally, Tattoos
+      <div class="small-news-article">Finally, Tattoos
         <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-kevin-bidwell-2183131.jpg" alt="fourth tat article">
       </div>
-      <div class="article-eight">Little Kitty Cat
+      <div class="small-news-article">Little Kitty Cat
         <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-cats-coming-1605481.jpg" alt="fourth cat article">
       </div>
     </section>
