fixed the navbar flexbox properties

--- a/code/index.html
+++ b/code/index.html
@@ -10,13 +10,14 @@
 
   </head>
 <body>
-  <div class="mormor">
 
     <!-- Hero section -->
-  <header class="container-hero"> 
+  <header></header>  
+  
+  <div class="container-hero"> 
       <h1>Dog Parent Weekly</h1>
       <img class="logo" src="/project-news-site/code/logo.svg" alt="Technigo logo">
-     
+
       <div class="hamburger"></div>
       <div class="hamburger"></div>
       <div class="hamburger"></div> 
@@ -24,12 +25,12 @@
       <div class="menu">MENU</div>
        <nav>
           <ul class="navbar">
-            <li> <a href="#">Home</a></li>
-            <li> <a href="#">About us</a></li>
-            <li> <a href="#">Contact</a></li>
+            <li> <a href="#">HOME</a></li>
+            <li> <a href="#">ABOUT US</a></li>
+            <li> <a href="#">CONTACT</a></li>
           </ul>
         </nav>
-    </header>
+  </div> 
 
 <!--- End of hero section -->
 
