changed class name for small news boxes. No need to style them individually.

--- a/code/index.html
+++ b/code/index.html
@@ -57,7 +57,7 @@
 
         <!-- The news boxes  -->
     <section class="info-boxes">
-      <div class="box one">
+      <div class="box">
         <div class="text-in-fatbox">
         <h3>Top trails</h3>
         <p>Find your next adventure!</p>
@@ -66,7 +66,7 @@
         <img src="image-box-one.jpeg" alt="Picture of trail in Portugal">
         </div>
       </div>
-      <div class="box two">
+      <div class="box">
         <div class="text-in-fatbox">
         <h3>City hikes</h3>
         <p>Find trails close by</p>
@@ -75,7 +75,7 @@
         <img src="image-box-two.jpeg" alt="Picture showing a city view">
         </div>
       </div>
-      <div class="box three">
+      <div class="box">
         <div class="text-in-fatbox">
         <h3>Tasty recipes</h3>
         <p>Perfect for cooking outside</p>
@@ -84,7 +84,7 @@
         <img src="image-box-three.jpeg" alt="Picture of cooking in nature">
         </div>
       </div>
-      <div class="box four">
+      <div class="box">
         <div class="text-in-fatbox">
         <h3>What to bring?</h3>
         <p>Find suggestions for packlist</p>
@@ -93,7 +93,7 @@
         <img src="image-box-four.jpeg" alt="Picture of the essentials for 1day hike">
         </div>
       </div>
-      <div class="box five">
+      <div class="box">
         <div class="text-in-fatbox">
         <h3>Shoe guide</h3>
         <p>Our best tips for shoes</p>
@@ -102,7 +102,7 @@
         <img src="image-box-five.jpeg" alt="Picture of hiking shoes">
         </div>
       </div>
-      <div class="box six">
+      <div class="box">
         <div class="text-in-fatbox">
         <h3>Short hikes</h3>
         <p>Find suggestions on easier trails</p>
@@ -111,7 +111,7 @@
         <img src="image-box-six.jpeg" alt="Picture of trail in the woods">
         </div>
       </div>
-      <div class="box seven">
+      <div class="box">
         <div class="text-in-fatbox">
         <h3>Mountain hikes</h3>
         <p>Most breathtaking ones</p>
@@ -120,7 +120,7 @@
         <img src="image-box-seven.jpeg" alt="Picture showing mountain view">
         </div>
       </div>
-      <div class="box eight">
+      <div class="box">
         <div class="text-in-fatbox">
         <h3>Coastal hikes</h3>
         <p>Scenic trails along the coast</p>
