trying to upload to master branch

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,237 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alien Invasion Updates</title>
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+
+</head>
+<body>
+
     <header>
-      <!-- Some kind of logo and navbar -->
+        <img class="site-logo" src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Icons\AIU_logo.jpg">
+        <h1 class="title" id="H1">Alien Invasion Updates</h1>
     </header>
+    <section class="top-grid">
+    <nav class="top-grid-item navbar">
+       <a href="link">Evacuation zones</a>
+       <a href="link">Expert interviews</a>
+       <a href="link">Survival guide</a>
+       <a href="link">About AIU</a>
+    </nav>
+</div>
+<div class="top-grid-item video-news">
+    <iframe
+    src="https://player.vimeo.com/video/660198249">
+</iframe>
+</div>
+<div class="top-grid-item main-news-article">
+  <h3>Alien activity causing extreme weather: "Seek immediate shelter"</h3>
+    <article class="news-article">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pretium 
+      diam nec vulputate tempor. Etiam sit amet tincidunt tellus, ut aliquet
+      ante. Maecenas sollicitudin fringilla malesuada. Sed sapien ipsum, viverra
+       in eleifend eu, scelerisque ac erat.</article> 
+       <p>Aliquam ligula nulla, tincidunt id 
+       sem efficitur, iaculis egestas dolor. Lorem ipsum dolor sit amet, 
+       consectetur adipiscing elit. Cras ut lorem vel mauris interdum molestie 
+       in ut eros. Etiam auctor ut nisl et vulputate. Maecenas consectetur ex 
+       ac risus mollis, et interdum felis ultrices. Donec malesuada quam augue, 
+       non luctus mi ornare vel. Donec auctor mauris non nulla elementum, a 
+       dignissim est condimentum. Integer porta arcu a ex feugiat, in euismod 
+       orci lobortis. Cras mattis facilisis erat eget laoreet.</p>
+</div>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<div class="top-grid-item advertisement">
+    <a href="link to store" target="_blank">
+        <p class="ad-text">survival gear store</p>
+        <div class="desktop-only-wrapper">
+          <h5>Go to store</h5>
+        <img class="desktop-only" alt="advertisement" src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\vertical_ad.jpeg">
+        </div>
+        <img class="portable-only" alt="advertisement" src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\horizontal_ad.jpeg">
+    </a>
+</div>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
-</html>
+<div class="top-grid-item bottom-row">
+  <p>Stay tuned, stay safe. AIU brings you global invasion news.</p>
+</div>
+</section>
+
+<section class="article-grid">
+<div class="flex-child twelve">
+  <a href="link to article" target="_blank">
+  <img class="img-height-size" alt="Bright star in red cloud" 
+  src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\alien_world.jpeg">
+<div class="preview-text">
+  <h4>Alien Homeworld located</h4>
+  <p>article preview article preview article preview article preview article preview
+    article preview article preview article preview article preview article preview 
+    article preview article preview article preview article preview</p>
+  </a>
+</div>
+</div>
+<div class="flex-child eleven">
+  <a href="link to article" target="_blank">
+    <img class="img-width-size" alt="Sailboat going out to sea"
+    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\sailboat.jpeg">
+    <div class="preview-text">
+  <h4>Zero contact with seafarers</h4>
+  <p>article preview article preview article preview article preview article preview
+    article preview article preview article preview article preview article preview 
+    article preview article preview article preview article preview</p>
+  </a>
+</div>
+</div>
+<div class="flex-child ten">
+  <a href="link to article" target="_blank">
+    <img class="img-height-size" alt="Couple being interviewed"
+    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\couple_interview.jpeg">
+    <div class="preview-text">
+      <h4>Interview: "We were abducted"</h4>
+      <p>article preview article preview article preview article preview article preview
+        article preview article preview article preview article preview article preview 
+        article preview article preview article preview article preview</p>
+      </a>
+    </div>
+</div>
+<div class="flex-child nine">
+  <a href="link to article" target="_blank">
+    <img class="img-width-size" alt="Circle hovering over rock formation"
+    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\halo.jpeg">
+    <div class="preview-text">
+      <h4>Sightings linked to disappearances</h4>
+      <p>article preview article preview article preview article preview article preview
+        article preview article preview article preview article preview article preview 
+        article preview article preview article preview article preview</p>
+      </a>
+    </div>
+</div>
+<div class="flex-child eight">
+  <a href="link to article" target="_blank">
+  <img class="img-height-size" alt="Protesters gathered outside mosque"
+  src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\blue_mosque.jpeg">
+  <div class="preview-text">
+    <h4>Worldwide demands for political action</h4>
+    <p>article preview article preview article preview article preview article preview
+      article preview article preview article preview article preview article preview 
+      article preview article preview article preview article preview</p>
+    </a>
+  </div>
+</div>
+<div class="flex-child seven">
+  <a href="link to article" target="_blank">
+    <img class="img-height-size" alt="Computer screen with code"
+    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\code.jpeg">
+    <div class="preview-text">
+      <h4>Hackers launch counterattack</h4>
+      <p>article preview article preview article preview article preview article preview
+        article preview article preview article preview article preview article preview 
+        article preview article preview article preview article preview</p>
+      </a>
+    </div>
+</div>
+<div class="flex-child six">
+  <a href="link to article" target="_blank">
+    <img class="img-width-size" alt="Child waiting among half empty grocery shelves"
+    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\boy.jpeg">
+    <div class="preview-text">
+      <h4>Supply chains disrupted</h4>
+      <p>article preview article preview article preview article preview article preview
+        article preview article preview article preview article preview article preview 
+        article preview article preview article preview article preview</p>
+      </a>
+    </div>
+</div>
+<div class="flex-child five">
+  <a href="link to article" target="_blank">
+    <img class="img-height-size" alt="Volcanic erruption"
+    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\volcano2.jpeg">
+    <div class="preview-text">
+      <h4>Outlandish global scale volcanic activity</h4>
+      <p>article preview article preview article preview article preview article preview
+        article preview article preview article preview article preview article preview 
+        article preview article preview article preview article preview</p>
+      </a>
+    </div>
+</div>
+<div class="flex-child four">
+  <a href="link to article" target="_blank">
+    <img class="img-height-size" alt="Smiling person carrying box and plant"
+    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\ready_to_go.jpeg">
+    <div class="preview-text">
+      <h4>Phoenix man: "I've been waiting"</h4>
+      <p>article preview article preview article preview article preview article preview
+        article preview article preview article preview article preview article preview 
+        article preview article preview article preview article preview</p>
+      </a>
+    </div>
+</div>
+<div class="flex-child three">
+  <a href="link to article" target="_blank">
+    <img class="img-width-size" alt="French policemen face crowd"
+    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\police_france.jpeg">
+    <div class="preview-text">
+      <h4>Police fight worldwide riots</h4>
+      <p>article preview article preview article preview article preview article preview
+        article preview article preview article preview article preview article preview 
+        article preview article preview article preview article preview</p>
+      </a>
+    </div>
+</div>
+<div class="flex-child two">
+  <a href="link to article" target="_blank">
+    <img class="img-height-size" alt="Chaotic street scene"
+    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\riot.jfif">
+    <div class="preview-text">
+      <h4>Cities overrun by riots following invasion event</h4>
+      <p>article preview article preview article preview article preview article preview
+        article preview article preview article preview article preview article preview 
+        article preview article preview article preview article preview</p>
+      </a>
+    </div>
+</div>
+<div class="flex-child one">
+  <a href="link to article" target="_blank">
+    <img class="img-width-size" alt="Evening view of Mexico City"
+    src="C:\Users\josef\Desktop\AlienInvasion\Alien-invasion-site\Images\mexico_city2.jpeg">
+    <div class="preview-text">
+      <h4>Alien species invades Earth</h4>
+      <p>article preview article preview article preview article preview article preview
+        article preview article preview article preview article preview article preview 
+        article preview article preview article preview article preview</p>
+      </a>
+    </div>
+</div>
+</section>
+
+
+<footer>
+   <div class="footer-wrapper">
+        <section class="subscription-form">
+          <form>
+            <label class="subscription-text">Subscribe to Alien Invasion Updates</label>
+            <div class="subscription-input-area">
+              <input type="text" placeholder="first name">
+            <!-- autocomplete not working in chrome (only codepen) -->
+            <input type="email" 
+            autocomplete="email"
+            placeholder="your email here">
+              </input>
+            </div>
+          <div class="subscription-submit-button">
+            <input type="submit" value="Submit email">
+            </input>
+          </div>
+          </form>
+        </section>
+
+        <button class="btn-home">
+          <a href="#H1"><span>Top of page</span></a>
+        </button>
+</div>    
+</footer>
+</body>
