Fixed image resizing issues and font sizes

--- a/code/index.html
+++ b/code/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400&family=Playfair+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200;300;400;500&family=Playfair+Display&display=swap" rel="stylesheet">
+    
   </head>
   <body>
     <header>
@@ -77,7 +78,7 @@
       <div class="big-news-box">        
         <a target="_blank" href="https://www.bbc.com/news/science-environment-63121338">
           <h2 class="big-news-title">Three scientists win Nobel for chemistry 'Lego'</h2>
-          <img class="big-news-image" src="https://images.unsplash.com/photo-1659975045301-b213fab4058b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80" />
+          <img class="big-news-image" src="molecules.jpg" />
         </a>
       </div>
     </section>
