--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dog parent weekly</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/b6916095c2.js" crossorigin="anonymous"></script>
 
   </head>
@@ -36,11 +36,13 @@
 <!--- End of hero section -->
 
 <!-- The big news content -->
+<main>
+<div class="main-article-container">
   <section class="big-mama-news">
         <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="big-news-img" alt="">
         <p class="big-news-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, optio porro sint ea aliquid vitae eos doloribus ut consectetur, enim vel, dolores molestias pariatur distinctio a. Aut deleniti tenetur dolor?</p>
   </section>
-
+</main>
   <section class="small-mama-news">
 <div class="small-mama-news"> <img src="/project-news-site/assets/blackboston.jpg" class="grid__img" alt="">
 </div>
