Add headings, fix margins

--- a/code/index.html
+++ b/code/index.html
@@ -142,13 +142,14 @@
                 title="Cat Yoga Indoors"
               />
               <figcaption>
-                <em>Photo: Michelle Wegler</em>
+                <em>Photo: Smirre Archives</em>
               </figcaption>
             </figure>
           </div>
         </div>
       </section>
       <section class="other-news">
+        <h3>Reviews of Training</h3>
         <!-- The other news  -->
         <!-- On desktop-sized screens: four cards in a row, 
          On tablets: two in a row, 
@@ -156,7 +157,7 @@
         <div class="grid-parent-other-news">
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h3>Reviews of Training</h3>
+              <h4>Outdoor Yoga</h4>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="img-other-news-div">
                   <div class="card">
@@ -193,6 +194,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
+              <h4>Bouldering</h4>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="img-other-news-div">
                   <div class="card">
@@ -220,6 +222,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
+              <h4>Power Walkin'</h4>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="img-other-news-div">
                   <div class="card">
@@ -245,6 +248,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
+              <h4>Abs Crunchin'</h4>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="img-other-news-div">
                   <div class="card">
