Change place images and review in other news

--- a/code/index.html
+++ b/code/index.html
@@ -149,7 +149,7 @@
         </div>
       </section>
       <section class="other-news">
-        <h3>Reviews of Training</h3>
+        <h3>Smirre Works Out</h3>
         <!-- The other news  -->
         <!-- On desktop-sized screens: four cards in a row, 
          On tablets: two in a row, 
@@ -159,17 +159,13 @@
             <div class="other-news-paragraph">
               <h4>Outdoor Yoga</h4>
               <div class="grid-child-other-news medium-grid-item">
-                <div class="img-other-news-div">
+                <div class="other-news-div">
                   <div class="card">
                     <div>
-                      <img
-                        src="../img/outoodoorYogaCat.jpg"
-                        class="img-other-news-one"
-                        alt="A cat doing yoga outdoors"
-                        title="Outdoor Yoga Cat"
-                      />
                       <div>
-                        <p class="review">“I absolutely adore outdoor yoga!”</p>
+                        <p class="review">
+                          <q>I absolutely adore outdoor yoga!</q>
+                        </p>
                         <i class="material-icons pets" aria-hidden="true"
                           >pets</i
                         >
@@ -186,6 +182,12 @@
                           >pets</i
                         >
                       </div>
+                      <img
+                        src="../img/outoodoorYogaCat.jpg"
+                        class="img-other-news-one"
+                        alt="A cat doing yoga outdoors"
+                        title="Outdoor Yoga Cat"
+                      />
                     </div>
                   </div>
                 </div>
@@ -196,18 +198,14 @@
             <div class="other-news-paragraph">
               <h4>Bouldering</h4>
               <div class="grid-child-other-news medium-grid-item">
-                <div class="img-other-news-div">
+                <div class="other-news-div">
                   <div class="card">
-                    <img
-                      src="../img/climbingCat.jpg"
-                      class="img-other-news-two"
-                      alt="A cat climbing"
-                      title="Climbing Cat"
-                    />
                     <div>
                       <p class="review">
-                        “Wow, bouldering was so much fun, and scary at the same
-                        time!”
+                        <q
+                          >Wow, bouldering was so much fun, and scary at the
+                          same time!</q
+                        >
                       </p>
                       <i class="material-icons pets" aria-hidden="true">pets</i>
                       <i class="material-icons pets" aria-hidden="true">pets</i>
@@ -215,6 +213,12 @@
                       <i class="material-icons pets" aria-hidden="true">pets</i>
                       <i class="material-icons pets" aria-hidden="true">pets</i>
                     </div>
+                    <img
+                      src="../img/climbingCat.jpg"
+                      class="img-other-news-two"
+                      alt="A cat climbing"
+                      title="Climbing Cat"
+                    />
                   </div>
                 </div>
               </div>
@@ -224,23 +228,23 @@
             <div class="other-news-paragraph">
               <h4>Power Walkin'</h4>
               <div class="grid-child-other-news medium-grid-item">
-                <div class="img-other-news-div">
+                <div class="other-news-div">
                   <div class="card">
-                    <img
-                      src="../img/walkingCat.jpeg"
-                      class="img-other-news-three"
-                      alt="A cat walking"
-                      title="Walking Cat"
-                    />
                     <div>
                       <p class="review">
-                        “Walking is nice, but I didn't work up a sweat”
+                        <q>Walking is nice, but I didn't work up a sweat</q>
                       </p>
                       <i class="material-icons pets" aria-hidden="true">pets</i>
                       <i class="material-icons pets" aria-hidden="true">pets</i>
                       <i class="material-icons pets" aria-hidden="true">pets</i>
                       <i class="material-icons pets" aria-hidden="true">pets</i>
                     </div>
+                    <img
+                      src="../img/walkingCat.jpeg"
+                      class="img-other-news-three"
+                      alt="A cat walking"
+                      title="Walking Cat"
+                    />
                   </div>
                 </div>
               </div>
@@ -250,20 +254,20 @@
             <div class="other-news-paragraph">
               <h4>Abs Crunchin'</h4>
               <div class="grid-child-other-news medium-grid-item">
-                <div class="img-other-news-div">
+                <div class="other-news-div">
                   <div class="card">
+                    <div>
+                      <p class="review"><q>Omg, I hate crunches!</q></p>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                    </div>
                     <img
                       src="../img/crunchingCat.jpg"
                       class="img-other-news-four"
                       alt="A cat doing crunches"
                       title="Crunching Cat"
                     />
-                    <div>
-                      <p class="review">“Omg, I hate crunches!”</p>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
-                      <i class="material-icons pets" aria-hidden="true">pets</i>
-                    </div>
                   </div>
                 </div>
               </div>
