my first project added to git

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,109 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
+    <link rel="icon" type="image/x-icon" href="images/logo.png">
+    <link rel=" stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./responsiveStyle.css" />
+</head>
+
+<body>
     <header>
-      <!-- Some kind of logo and navbar -->
+        <div class="headerLogos">
+            <img class="headerLogo" src="images/logo.PNG" alt="" />
+            <img class="tnLogo" src="images/TNlogo.PNG" alt="" />
+        </div>
+        <ul class="mainNavbar">
+            <li><a href="https://soft-alpaca-e30a0d.netlify.app/">Home</a></li>
+            <li><a href="https://www.bangkokpost.com/thailand">News</a></li>
+            <li><a href="https://www.bangkokpost.com/world">World</a></li>
+            <li><a href="https://www.bangkokpost.com/business/">Business</a></li>
+            <li><a href="https://www.bangkokpost.com/travel/">Travel</a></li>
+            <li><a href="contact.asp">Contact</a></li>
+            <li><a href="about.asp">About</a></li>
+        </ul>
     </header>
+    <a class="bigNewsLink"
+        href="https://www.bangkokpost.com/thailand/general/2481169/immigration-officers-linked-to-triad-visa-racket">
+        <section class="big-news">
+            <img class="bigNewsImg" src="Images/bigNewsImg.jpg" alt="" />
+            <div class="bigNewsText">
+                <h1>Immigration officers linked to triad visa racket</h1>
+                <p>Investigation finds some officials served as 'owners' of foundations set up to help Chinese
+                    businessmen
+                </p>
+                <p>An investigation into corruption by senior Immigration Bureau (IB) officers has found clear evidence
+                    of
+                    some officers helping foreign criminals, and even serving as owners of foundations that arranged
+                    visas
+                    for Chinese nationals.</p>
+                <p>One of the foundations had its headquarters in a chicken coop, deputy national police chief Pol Gen
+                    Surachate Hakparn said on Thursday, a day after presenting his findings to national police chief Pol
+                    Gen
+                    Damrongsak Kittiprapas.</p>
+            </div>
+        </section>
+    </a>
 
-    <section class="big-news">
-      <!-- The big news content -->
+    <hr />
+
+    <section class="other-news">
+
+        <a href="https://www.bangkokpost.com/thailand/general/2481507/250-youths-went-missing-last-year"
+            class="newsCard">
+            <img class="otherNewsImage" src="images/other-news/image1.jpg" alt="">
+            <p>250 youths went missing last year</p>
+        </a>
+
+        <a href="https://www.bangkokpost.com/business/2481885/baht-surges-to-its-strongest-level-in-10-months"
+            class="newsCard">
+            <img class="otherNewsImage" src="images/other-news/image2.jpg" alt="">
+            <p>Baht surges to its strongest level in 10 months</p>
+        </a>
+
+        <a href="https://www.bangkokpost.com/thailand/general/2481327/cops-bust-youtube-scam" class="newsCard">
+            <img class="otherNewsImage" src="images/other-news/image3.jpg" alt="">
+            <p>Cops bust YouTube scam</p>
+        </a>
+
+        <a href="https://www.bangkokpost.com/thailand/general/2481337/royal-thai-navy-100-million-baht-is-needed-to-salvage-htms-sukhothai"
+            class="newsCard">
+            <img class="otherNewsImage" src="images/other-news/image4.jpg" alt="">
+            <p>B100m' is needed to salvage warship</p>
+        </a>
+
+        <a href="https://www.bangkokpost.com/thailand/general/2481142/free-covid-tests-for-ill-visitors"
+            class="newsCard">
+            <img class="otherNewsImage" src="images/other-news/image5.jpg" alt="">
+            <p>Free Covid tests for ill visitors</p>
+        </a>
+
+        <a href="https://www.bangkokpost.com/travel/2475734/meli%C3%A1-chiang-mai-launches-doughnut-set"
+            class="newsCard">
+            <img class="otherNewsImage" src="images/other-news/image6.jpg" alt="">
+            <p>Meliá Chiang Mai launches doughnut set</p>
+        </a>
+
+        <a href="https://www.bangkokpost.com/travel/2472070/what-new-covid-restrictions-are-chinese-travellers-facing-"
+            class="newsCard">
+            <img class="otherNewsImage" src="images/other-news/image8.jpg" alt="">
+            <p>What new Covid restrictions are Chinese travellers facing?</p>
+        </a>
+
+        <a href="https://www.bangkokpost.com/travel/2468092/bangkok-tops-airbnb-global-search-table" class="newsCard">
+            <img class="otherNewsImage" src="images/other-news/image7.jpg" alt="">
+            <p>Bangkok tops Airbnb global search table</p>
+        </a>
+
+
     </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+    <footer>
+        <p>Created By Ajmal Zahir</p>
+    </footer>
+
+</body>
+
 </html>
