solved the text overflow issue

--- a/code/index.html
+++ b/code/index.html
@@ -40,11 +40,12 @@
 <div class="main-article-container">
   <section class="big-mama-news">
         <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="big-news-img" alt="">
-        <p class="big-news-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, optio porro sint ea aliquid vitae eos doloribus ut consectetur, enim vel, dolores molestias pariatur distinctio a. Aut deleniti tenetur dolor?</p>
+        <p class="small-mama-news"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, optio porro sint ea aliquid vitae eos doloribus ut consectetur, enim vel, dolores molestias pariatur distinctio a. Aut deleniti tenetur dolor?</p>
   </section>
 </main>
   <section class="small-mama-news">
 <div class="small-mama-news"> <img src="/project-news-site/assets/blackboston.jpg" class="grid__img" alt="">
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil maiores est quos? Quia recusandae nulla quaerat similique earum, quisquam amet accusamus doloremque, dolores, corrupti ab deleniti fugit est dolore. Doloribus?</p>
 </div>
       <div class="small-mama-news"> <img src="/project-news-site/assets/blinkingpuppy.jpg" class="grid__img" alt="">
         </div>
