fixed padding for desktop

--- a/code/index.html
+++ b/code/index.html
@@ -58,16 +58,32 @@
         <div class="grid-item grid-big-news">
           <article>
             <h1>Murder solved after 15 years!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra mauris in aliquam sem fringilla ut morbi tincidunt augue. Cras pulvinar mattis nunc sed blandit libero volutpat sed cras. At tellus at urna condimentum mattis pellentesque id nibh tortor. Praesent tristique magna sit amet purus gravida. Odio aenean sed adipiscing diam donec. Dolor sed viverra ipsum nunc aliquet bibendum. Molestie at elementum eu facilisis sed. Eget magna fermentum iaculis eu non diam phasellus vestibulum. Fames ac turpis egestas integer eget aliquet nibh praesent tristique.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+              sed do eiusmod tempor incididunt ut labore et dolore magna 
+              aliqua. Viverra mauris in aliquam sem fringilla ut morbi 
+              tincidunt augue. Cras pulvinar mattis nunc sed blandit libero 
+              volutpat sed cras. </p>
           </article>
         </div>
         <div class="grid-item grid-other-news">
           <article>
             <h1>Murder solved after 15 years!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra mauris in aliquam sem fringilla ut morbi tincidunt augue. Cras pulvinar mattis nunc sed blandit libero volutpat sed cras. At tellus at urna condimentum mattis pellentesque id nibh tortor. Praesent tristique magna sit amet purus gravida. Odio aenean sed adipiscing diam donec. Dolor sed viverra ipsum nunc aliquet bibendum. Molestie at elementum eu facilisis sed. Eget magna fermentum iaculis eu non diam phasellus vestibulum. Fames ac turpis egestas integer eget aliquet nibh praesent tristique.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+              sed do eiusmod tempor incididunt ut labore et dolore magna 
+              aliqua. Viverra mauris in aliquam sem fringilla ut morbi 
+              tincidunt augue. Cras pulvinar mattis nunc sed blandit libero 
+              volutpat sed cras. </p>
           </article>
         </div>
-        <div class="grid-item grid-other-news">OTHER NEWS</div>
+        <div class="grid-item grid-other-news">
+          <article>
+            <h1>Murder solved after 15 years!</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+              sed do eiusmod tempor incididunt ut labore et dolore magna 
+              aliqua. Viverra mauris in aliquam sem fringilla ut morbi 
+              tincidunt augue. Cras pulvinar mattis nunc sed blandit libero 
+              volutpat sed cras. </p>
+        </div>
         <div class="grid-item grid-other-news">OTHER NEWS</div>
         <div class="grid-item grid-other-news">OTHER NEWS</div>
         <div class="grid-item grid-other-news">OTHER NEWS</div>
